build: complete housekeeping